src/App.module.css
a {
  color: unset;
}

.app {
  min-height: 100vh;
  display: grid;
  grid-template-rows: 1fr auto 1fr;
  justify-content: center;
  align-items: center;
  row-gap: 2em;
  margin: 0 1em;
}

.intro {
  display: flex;
  flex-direction: column;
  gap: 1em;
  text-align: center;
  align-self: end;
  mix-blend-mode: overlay;
  filter: brightness(10);
  text-wrap: balance;

  @media (max-width: var(--mobile)) {
    mix-blend-mode: unset;
    filter: unset;
  }

  h1 {
    margin: 0;
    font-size: 4em;
    font-weight: 600;

    .emojiLeft {
      display: inline-block;
      transform: scaleX(-1);
      margin-right: 0.1em;
    }

    .emojiRight {
      margin-left: 0.1em;
    }
  }

  .subtitle {
    font-size: 1.5em;
  }
}

.results {
  align-self: start;
  text-align: center;
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 1em;
  margin-bottom: 3em;

  .emojis {
    display: flex;
    gap: 0.5em;
    flex-wrap: wrap;
    justify-content: center;
  }

  .instructions {
    max-width: 480px;
    text-wrap: balance;
    opacity: 0.8;
    transition: 0.5s opacity;
    font-size: 1.1em;
    line-height: 1.4;

    &.copied {
      opacity: 1;
    }

    .emoji {
      font-size: 1.5em;
      margin-right: 0.25ch;
      vertical-align: middle;
    }
  }
}

.footer {
  position: absolute;
  margin: 1em;
  bottom: 0;
  left: 0;
  opacity: 0.75;
  font-size: 0.9em;
}

@media (max-width: 640px) {
  .app {
    grid-template-rows: repeat(3, max-content);
  }

  .intro {
    margin-top: 2em;
    mix-blend-mode: unset;
    filter: unset;

    h1 {
      font-size: 3em;
    }
  }
}

